--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file list the individuals that contributed content to the repository.
 
 Olubimi Michael Olumide <olubimimichael01@gmail.com@gmail.com>
-
+Nathan Pillay <nathan94pillay@gmail.com>
